--- a/clusters/overlays/kind-bird/infra.yaml
+++ b/clusters/overlays/kind-bird/infra.yaml
@@ -6,7 +6,7 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
-  project: default
+  project: bootstrap
   source:
     repoURL: https://github.com/jacobscunn07/argocd-demo
     targetRevision: HEAD
