--- a/apps/infra/base/kong/kong.yaml
+++ b/apps/infra/base/kong/kong.yaml
@@ -6,7 +6,7 @@ metadata:
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
-  project: default
+  project: infra
   source:
     repoURL: https://charts.konghq.com
     targetRevision: "2.7.0"
