--- a/clusters/overlays/kind-bird/kustomization.yaml
+++ b/clusters/overlays/kind-bird/kustomization.yaml
@@ -1,6 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- bootstrap.yaml
-- business.yaml
-- infra.yaml
+- ../../../apps/argocd/overlays/kind-bird
