--- a/clusters/overlays/kind-bird/kustomization.yaml
+++ b/clusters/overlays/kind-bird/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- ../../../apps/argocd/overlays/kind-bird
-- argocd.yaml
+- bootstrap.yaml
+- business.yaml
+- infra.yaml
