--- a/apps/business/base/podinfo/podinfo.yaml
+++ b/apps/business/base/podinfo/podinfo.yaml
@@ -17,10 +17,10 @@ spec:
           enabled: true
           className: kong
           hosts:
-              - host: localhost
-                paths:
-                  - path: /
-                    pathType: Prefix
+            - host: localhost
+              paths:
+                - path: /*
+                  pathType: Prefix
   destination:
     server: https://kubernetes.default.svc
     namespace: podinfo
